k8s-manifests/quarkus-camel-razorpay/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkus-camel-razorpay
  labels:
    app: quarkus-camel-razorpay
    app.kubernetes.io/component: quarkus-camel-razorpay
    app.kubernetes.io/instance: quarkus-camel-razorpay
    app.kubernetes.io/name: quarkus-camel-razorpay
    app.kubernetes.io/part-of: java-apps
    app.openshift.io/runtime: quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-camel-razorpay
  template:
    metadata:
      labels:
        app: quarkus-camel-razorpay
        deployment: quarkus-camel-razorpay
    spec:
      containers:
        - name: quarkus-camel-razorpay
          image: 'quay.io/quayuser/quarkus-camel-razorpay-demo:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
