k8s-manifests/quarkus-camel-razorpay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-camel-razorpay
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quarkus-camel-razorpay
                port:
                  number: 8080
